<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_button3"
    tools:context="ie.tcd.scss.amhiggin.collegecalendar.Button3Activity"
    android:background="#ffe091">


    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/clickme"
        android:id="@+id/button2"
        android:background="@drawable/button_background"
        android:textColor="#ffffff"
        android:layout_marginBottom="53dp"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:id="@+id/imageView3"
        android:background="#ffe091"
        android:layout_marginBottom="26dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button2"
        android:layout_toEndOf="@+id/button2"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music"
            android:id="@+id/textView"
            android:textSize="20sp"
            android:textColor="#000000" />
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_height="40dp"
            android:text="@string/play"
            android:id="@+id/button"
            android:onClick="startMusic"
            android:background="@drawable/button_background"
            android:textColor="#ffffff"
            android:layout_width="100dp"
            android:layout_gravity="center_horizontal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer"
            android:id="@+id/textView2"
            android:textSize="20sp"
            android:textColor="#000000" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/notif"
            android:id="@+id/buttonAlarm"
            android:background="@drawable/button_background"
            android:textColor="#ffffff"
            android:onClick="onetimeTimer"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="EXTRAS"
        android:id="@+id/textView8"
        android:textSize="35sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
