<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffe091"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <Button
        android:id="@+id/viewNextMonthButton"
        android:text="@string/right"
        android:onClick="viewNextMonthButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button_background"
        android:textColor="#ffffff"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/viewPreviousMonthButton"
        android:text="@string/left"
        android:onClick="viewPreviousMonthButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/button_background"
        android:textColor="#ffffff"
        android:textSize="30sp"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="1000dp"
        android:id="@+id/listView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/viewPreviousMonthButton"
        android:layout_above="@+id/button4" />

    <TextView
        android:id="@+id/viewTitle"
        android:text="@string/no_view_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/viewDayButton"
        android:onClick="viewDayButton"
        android:background="@drawable/button_background"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/noEventsSaved_textView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
