<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainMenu"
    android:background="#ffffff">

    <Button
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:text="@string/button1"
        android:id="@+id/button1"
        android:textSize="25sp"
        android:textColor="#ffffff"
        android:background="@drawable/button_background"
        android:layout_marginTop="67dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="105dp"
        android:layout_height="30dp"
        android:text="@string/button3"
        android:id="@+id/button3"
        android:background="@drawable/button_background"
        android:textColor="#ffffff"
        android:layout_below="@+id/viewTodayButton"
        android:layout_alignLeft="@+id/viewTodayButton"
        android:layout_alignStart="@+id/viewTodayButton"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/toDoButton"
        android:text="To Do"
        android:layout_width="105dp"
        android:layout_height="30dp"
        android:background="@drawable/button_background"
        android:allowUndo="true"
        android:textColor="#ffffff"
        android:layout_alignTop="@+id/button3"
        android:layout_alignLeft="@+id/viewNotesButton"
        android:layout_alignStart="@+id/viewNotesButton" />

    <Button
        android:id="@+id/viewTodayButton"
        android:text="@string/viewTodayButton"
        android:onClick="viewTodayTimetable"
        android:layout_width="105dp"
        android:layout_height="30dp"
        android:background="@drawable/button_background"
        android:textColor="#ffffff"
        android:layout_alignTop="@+id/viewNotesButton"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignStart="@+id/button1" />

    <Button
        android:id="@+id/viewNotesButton"
        android:onClick="viewNotes"
        android:text="@string/notes"
        android:layout_width="105dp"
        android:layout_height="30dp"
        android:background="@drawable/button_background"
        android:textColor="#ffffff"
        android:layout_below="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:layout_alignEnd="@+id/button1"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:src="@drawable/logover2"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />
</RelativeLayout>
