<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ie.tcd.scss.amhiggin.collegecalendar.ToDoList"
    tools:showIn="@layout/activity_to_do_list"
    android:background="#ffe091">

    <Button
        android:id="@+id/addNewItemButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/addNewItem_button"
        android:textAlignment="center"
        android:onClick="addNewItemButton"
        android:width="100dp"
        android:background="@drawable/button_background"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="1000dp"
        android:id="@+id/listView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/viewTitle"
        android:layout_above="@+id/addNewItemButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <TextView
        android:id="@+id/viewTitle"
        android:text="@string/no_view_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/noItemsSaved_textView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:visibility="gone"
        android:onClick="cancelDeletion"
        android:id="@+id/cancelDeletionButton"
        android:background="@drawable/button_background"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_button"
        android:visibility="gone"
        android:onClick="deleteButton"
        android:id="@+id/deleteButton"
        android:background="@drawable/button_background"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/listView"/>


</RelativeLayout>