<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ie.tcd.scss.amhiggin.collegecalendar.AddNewEvent"
    android:background="#ffffff">

    <Button
        android:id="@+id/saveEvent_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:onClick="saveEventButton"
        android:text="@string/save_event"
        android:background="@drawable/button_background"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/cancel_button"
        android:onClick="cancelButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:background="@drawable/button_background"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ADD A NEW EVENT"
            android:textSize="35sp"
            android:id="@+id/textView7" />

        <Space
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:id="@+id/textView3"
            android:textSize="25sp"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/locationBox"
            android:layout_width="match_parent"
            android:layout_height="35sp"
            android:layout_marginTop="10dp"
            android:ems="6"
            android:inputType="text"
            android:backgroundTint="#ffe091"
            android:background="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title"
            android:id="@+id/textView4"
            android:textSize="25sp"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/titleBox"
            android:layout_width="match_parent"
            android:layout_height="35sp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:ems="6"
            android:inputType="text"
            android:backgroundTint="#ffe091"
            android:background="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:id="@+id/textView5"
            android:textSize="25sp"
            android:textColor="#000000"
            android:layout_marginTop="10dp" />

        <!--EditText
            android:id="@+id/timeBox"
            android:layout_width="match_parent"
            android:layout_height="35sp"
            android:layout_marginTop="10dp"
            android:ems="6"
            android:backgroundTint="#FFFFFEF7"
            android:background="#ffffff" />-->
    </LinearLayout>

    <Spinner
        android:layout_width="68dp"
        android:layout_height="35sp"
        android:ems="6"
        android:backgroundTint="#ffe091"
        android:background="#ffffff"
        android:id="@+id/HourSpinner"
        android:layout_below="@+id/linearLayout"
        android:layout_alignRight="@+id/saveEvent_button"
        android:layout_alignEnd="@+id/saveEvent_button" />

    <Spinner
        android:layout_width="68dp"
        android:layout_height="35sp"
        android:ems="6"
        android:backgroundTint="#ffe091"
        android:background="#ffffff"
        android:id="@+id/MinutesSpinner"
        android:layout_alignTop="@+id/HourSpinner"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
