<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ie.tcd.scss.amhiggin.collegecalendar.AddToDoItem"
    android:background="#ffffff">


    <Button
        android:id="@+id/saveItem_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:onClick="saveItemButton"
        android:text="@string/save_item"
        android:background="@drawable/button_background"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/cancel_button"
        android:onClick="cancelButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:background="@drawable/button_background"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="49dp"
        android:weightSum="1">


        <EditText
            android:id="@+id/titleBox"
            android:layout_width="match_parent"
            android:layout_height="35sp"
            android:maxLength="200"
            android:layout_marginTop="10dp"
            android:ems="6"
            android:background="#ffffff"
            android:layout_weight="0.86"
            android:textAlignment="gravity"
            android:gravity="top" />



    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:id="@+id/titleTitle"
        android:textSize="35sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>

